--- a/html/event.html
+++ b/html/event.html
@@ -147,7 +147,7 @@
                             <p>會員中心</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="message notify">
                         <a href="./mail.html">
                             <p>站內信</p>
                         </a>
