--- a/html/member.html
+++ b/html/member.html
@@ -662,7 +662,10 @@
                                         <span>※</span>
                                         LINE
                                     </p>
-                                    <input class="inputStyle_1">
+                                    <div class="btnInput inputStyle_1">
+                                        <input class="inputStyle_2">
+                                        <button type="button" class="btnStyle_1 changeBtn">修改</button>
+                                    </div>
                                     <p class="remind">line與WeChat擇一填寫即可</p>
                                 </label>
                                 <label>
@@ -670,7 +673,10 @@
                                         <span>※</span>
                                         WeChat
                                     </p>
-                                    <input class="inputStyle_1">
+                                    <div class="btnInput inputStyle_1">
+                                        <input class="inputStyle_2">
+                                        <button type="button" class="btnStyle_1 changeBtn">修改</button>
+                                    </div>
                                     <p class="remind">line與WeChat擇一填寫即可</p>
                                 </label>
                                 <button type="submit" class="submitBtn btnStyle_1">保存資料</button>
@@ -710,7 +716,7 @@
                                 <span>※</span>
                                 真實姓名
                             </p>
-                            <input class="inputStyle_1" value="******" disabled>
+                            <input class="inputStyle_2" value="******" disabled>
                             <button type="button" class="btnStyle_1 changeBtn callChangePW">修改</button>
                         </label>
                     </div>
