--- a/html/livePage.html
+++ b/html/livePage.html
@@ -540,6 +540,8 @@
             <div class="colorBlock darkBlue"></div>
             <div class="colorBlock red"></div>
             <div class="colorBlock green"></div>
+            <div class="colorBlock blue"></div>
+            <div class="colorBlock purple"></div>
         </div>
     </aside>
     <!-- footer -->
