--- a/html/deposit.html
+++ b/html/deposit.html
@@ -793,6 +793,7 @@
             <div class="colorBlock green"></div>
             <div class="colorBlock blue"></div>
             <div class="colorBlock purple"></div>
+            <div class="colorBlock orange"></div>
         </div>
     </aside>
     <!-- footer -->
