--- a/html/eventApply.html
+++ b/html/eventApply.html
@@ -894,6 +894,7 @@
             <div class="colorBlock green"></div>
             <div class="colorBlock blue"></div>
             <div class="colorBlock purple"></div>
+            <div class="colorBlock orange"></div>
         </div>
     </aside>
     <!-- footer -->
