--- a/html/help.html
+++ b/html/help.html
@@ -932,6 +932,7 @@
             <div class="colorBlock green"></div>
             <div class="colorBlock blue"></div>
             <div class="colorBlock purple"></div>
+            <div class="colorBlock orange"></div>
         </div>
     </aside>
     <!-- footer -->
