--- a/html/invite.html
+++ b/html/invite.html
@@ -640,6 +640,7 @@
             <div class="colorBlock green"></div>
             <div class="colorBlock blue"></div>
             <div class="colorBlock purple"></div>
+            <div class="colorBlock orange"></div>
         </div>
     </aside>
     <!-- footer -->
