--- a/html/register.html
+++ b/html/register.html
@@ -73,6 +73,7 @@
             <div class="colorBlock green"></div>
             <div class="colorBlock blue"></div>
             <div class="colorBlock purple"></div>
+            <div class="colorBlock orange"></div>
         </div>
     </aside>
     <!-- 彈窗 -->
