--- a/html/withdraw.html
+++ b/html/withdraw.html
@@ -796,6 +796,7 @@
             <div class="colorBlock green"></div>
             <div class="colorBlock blue"></div>
             <div class="colorBlock purple"></div>
+            <div class="colorBlock orange"></div>
         </div>
     </aside>
     <!-- footer -->
