--- a/html/eventApply.html
+++ b/html/eventApply.html
@@ -1030,6 +1030,64 @@
                 </ul>
             </div>
         </div>
+         <!-- 快速轉帳 -->
+         <div class="jumpWindow quickTransfer">
+            <div class="title">
+                <p>快速轉帳</p>
+                <!-- <i class="close_ic"></i> -->
+                <i class="fa-solid fa-xmark closeWindow"></i>
+            </div>
+            <div class="content">
+                <form>
+                    <label>
+                        <p class="itemName">平台</p>
+                        <p class="platformName">36588</p>
+                    </label>
+                    <label>
+                        <p class="itemName">中心錢包</p>
+                        <input type="text" class="inputStyle_1" value="$9999" disabled>
+                    </label>
+                    <label>
+                        <i class="fa-solid fa-down-long"></i>
+                    </label>
+                    <label>
+                        <p class="itemName">BNG電子娛樂</p>
+                        <input type="text" class="inputStyle_1" value="$0" disabled>
+                    </label>
+                    <label>
+                        <p class="itemName">轉帳金額</p>
+                        <input type="text" class="inputStyle_1" value="$100">
+                        <div class="transferBtn_Box">
+                            <button type="button" class="btnStyle_3 active">
+                                <p>$100</p>
+                            </button>
+                            <button type="button" class="btnStyle_3">
+                                <p>$500</p>
+                            </button>
+                            <button type="button" class="btnStyle_3">
+                                <p>$1000</p>
+                            </button>
+                            <button type="button" class="btnStyle_3">
+                                <p>$3000</p>
+                            </button>
+                            <button type="button" class="btnStyle_3">
+                                <p>$5000</p>
+                            </button>
+                            <button type="button" class="btnStyle_3">
+                                <p>$10000</p>
+                            </button>
+                            <button type="button" class="btnStyle_3">
+                                <p>全部</p>
+                            </button>
+                        </div>
+                        <button type="button" class="btnStyle_1 checkBtn closeWindow">確定</button>
+                    </label>
+                </form>
+            </div>
+            <div class="btnBox">
+                <button class="btnStyle_1">進入遊戲</button>
+            </div>
+        </div>
     </div>
     <div class="bg"></div>
 </body>
