--- a/index.html
+++ b/index.html
@@ -98,32 +98,32 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./slotPage.html">
+                            <a href="javascript:;">
                                 <p>老虎機</p>
                             </a>
                         </li>
                         <li>
-                            <a href="./lotteryPage.html">
+                            <a href="javascript:;">
                                 <p>彩票</p>
                             </a>
                         </li>
                         <li>
-                            <a href="./fishPage.html">
+                            <a href="javascript:;">
                                 <p>捕魚機</p>
                             </a>
                         </li>
                         <li>
-                            <a href="./boardPage.html">
+                            <a href="javascript:;">
                                 <p>棋牌遊戲</p>
                             </a>
                         </li>
                         <li>
-                            <a href="./event.html">
+                            <a href="javascript:;">
                                 <p>優惠中心</p>
                             </a>
                         </li>
                         <li>
-                            <a href="./vip.html">
+                            <a href="javascript:;">
                                 <p>VIP會員</p>
                             </a>
                         </li>
@@ -190,7 +190,7 @@
                 </ol>
                 <ol class="slot">
                     <li>
-                        <a href="./slotPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/bng.png">
                             <p>BNG電子娛樂</p>
                         </a>
@@ -203,61 +203,61 @@
                         </div>
                     </li>
                     <li>
-                        <a href="./slotPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/bwin.png">
                             <p>必贏電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./slotPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/fa.png">
                             <p>福星電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./slotPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/gr.png">
                             <p>好路棋牌</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./slotPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/fungame.png">
                             <p>FUN GAME</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./slotPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/pls.png">
                             <p>PLS電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./slotPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/png.png">
                             <p>PNG電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./slotPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/rsg.png">
                             <p>RSG電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./slotPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/sp.png">
                             <p>SimplePlay</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./slotPageInner.html;">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/tpg.png">
                             <p>TPG電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./slotPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/slot/ufo.png">
                             <p>UFO電子娛樂</p>
                         </a>
@@ -285,37 +285,37 @@
                 </ol>
                 <ol class="fish">
                     <li>
-                        <a href="./fishPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/fish/bwin.png">
                             <p>必贏電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./fishPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/fish/fa.png">
                             <p>福星電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./fishPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/fish/gr.png">
                             <p>好路棋牌</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./fishPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/fish/rsg.png">
                             <p>RSG電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./fishPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/fish/sp.png">
                             <p>SimplePlay</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./fishPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/fish/tpg.png">
                             <p>TPG電子娛樂</p>
                         </a>
@@ -323,37 +323,37 @@
                 </ol>
                 <ol class="board">
                     <li>
-                        <a href="./boardPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/board/bts.png">
                             <p>BTS電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./boardPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/board/fa.png">
                             <p>福星電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./boardPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/board/gr.png">
                             <p>好路棋牌</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./boardPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/board/fungame.png">
                             <p>FUN GAME</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./boardPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/board/png.png">
                             <p>PNG電子娛樂</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./boardPageInner.html">
+                        <a href="javascript:;">
                             <img src="./img/partner/board/rwd.png">
                             <p>白鹿電子娛樂</p>
                         </a>
@@ -522,22 +522,22 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./event.html">
+                        <a href="javascript:;">
                             <p>優惠</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./vip.html">
+                        <a href="javascript:;">
                             <p>VIP會員</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./help.html">
+                        <a href="javascript:;">
                             <p>幫助中心</p>
                         </a>
                     </li>
                     <li>
-                        <a href="./help.html">
+                        <a href="javascript:;">
                             <p>關於我們</p>
                         </a>
                     </li>
